--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="fields__buttons">
-                <button id="btnlogin">Entrar</button>
+                <button id="btnlogin">Entre</button>
             </div>
 
             <div class="fields__recovery">
