--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/login.css">
-    <link rel="stylesheet" href="styles/login-responsive.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/Login/login.css">
+    <link rel="stylesheet" href="styles/Login/login-responsive.css">
     <title>Orkut</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div class="fields">
 
             <div class="fields__title">
-                <p id="fields__title">Acesse o <span class="pink-font">Orkut</span> com a sua conta <span style="color: rgb(255, 0, 24);">G</span><span style="color: rgb(255, 165, 44);">o</span><span style="color: rgb(255, 255, 65);">o</span><span style="color: rgb(0, 128, 24);">g</span><span style="color: rgb(0, 0,249 );">l</span><span style="color: rgb(134, 0, 125 );">e</span>!</p>
+                <p id="fields__title">Acesse o <span class="orkut-font-color">Orkut</span> com a sua conta <span style="color: rgb(255, 0, 24);">G</span><span style="color: rgb(255, 165, 44);">o</span><span style="color: rgb(255, 255, 65);">o</span><span style="color: rgb(0, 128, 24);">g</span><span style="color: rgb(0, 0,249 );">l</span><span style="color: rgb(134, 0, 125 );">e</span>!</p>
             </div>
 
             <div class="fields__textboxs">
@@ -32,7 +33,7 @@
             </div>
 
             <div class="fields__buttons">
-                <button id="btnlogin">Entrar</button>
+                <button id="btnlogin" class="orkut-button-bg">Entrar</button>
             </div>
 
             <div class="fields__recovery">
@@ -40,7 +41,7 @@
             </div>
 
             <div class="fields__create">
-                <a href="#">Não tem conta? <span class="pink-font">Criar agora</span></a>
+                <a href="#">Não tem conta? <span class="orkut-font-color">Criar agora</span></a>
             </div>
 
         </div>
